--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -4,9 +4,14 @@
 	&__heading {
 		font-size: 4rem;
 		line-height: 1.2;
+
+		@media only screen and (max-width: $small) {
+			font-size: 3rem;
+		} //max-width: 550px
 	}
 
 	&__text {
+		font-weight: 300;
 		margin-top: 3rem;
 	}
 }
